# lc2git

./: .gitignore  PYPI_USAGE.md  README.md  pyproject.toml
.github/workflows/: daily-sync.yml
lc2git/: __init__.py  _version.py  cli.py  config.py  exceptions.py  github_client.py  leetcode_client.py  sync.py
lc2git/github/: __init__.py
lc2git/leetcode/: __init__.py
tests/: __init__.py  test_config.py  test_exceptions.py
