[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "lc2git"
version     = "1.0.1"
description = "Sync your LeetCode solutions, stats and problem descriptions to GitHub"
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "lc2git contributors" },
]
keywords = ["leetcode", "github", "sync", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/you/lc2git"
Source = "https://github.com/you/lc2git"
Issues = "https://github.com/you/lc2git/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
lc2git = "lc2git.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["lc2git*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
